--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Budget Creator</title>
+	<link rel="stylesheet" href="style.css">
   </head>
   <body>
 	<script src="load.js"></script>
