Bootstrap CSS Imported
While the Bootstrap JS no longer causes errors, the CSS was not able to
be imported from the node module, so the CSS was added manually.

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Budget Creator</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
+	<link
   </head>
   <body>
 	<script src="load.js"></script>
 	<div id="sidebar"></div>
-	<div id="mainview"></div>
+	<div id="mainview" class="container">
+		<div class="alert alert-info">
+			This is an alert!
+		</div>
+	</div>
   </body>
 </html>
