--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -6,14 +6,23 @@
     <title>Budget Creator</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="bootstrap.min.css">
-	<link
+	<link>
   </head>
   <body>
 	<script src="load.js"></script>
-	<div id="sidebar"></div>
+	<div id="sidebar" class="container">
+		<div class="page-header">
+			<h3>Budgeting App</h3>
+		</div>
+		<div class="btn-group-vertical w-100">
+			<button type="button" class="btn btn-primary">Transactions</button>
+			<button type="button" class="btn btn-primary">Categories</button>
+		</div>
+	</div>
 	<div id="mainview" class="container">
 		<div class="alert alert-info">
 			This is an alert!
+			<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 		</div>
 	</div>
   </body>
