--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -15,8 +15,8 @@
 			<h3>Budgeting App</h3>
 		</div>
 		<div class="btn-group-vertical w-100">
-			<button type="button" class="btn btn-primary">Transactions</button>
-			<button type="button" class="btn btn-primary">Categories</button>
+			<button type="button" class="btn btn-primary" id="side-button">Transactions</button>
+			<button type="button" class="btn btn-primary" id="side-button">Categories</button>
 		</div>
 	</div>
 	<div id="mainview" class="container">
