Added functions to test basic database functionality.

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -11,6 +11,7 @@
   <body>
 	<script src="load.js"></script>
 	<script src="button.js"></script>
+	<script src="data/database.js"></script>
 	<div id="sidebar" class="container">
 		<div class="page-header">
 			<h3>Budgeting App</h3>
