Add button now closes transactions modal.

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -56,7 +56,7 @@
 											<label for="date">Date:</label>
 											<input type="date" class="form-control" id="date">
 										</div>
-										<button type="button" class="btn btn-primary" onClick="processTransaction()">Add</button>
+										<button type="button" class="btn btn-primary" data-dismiss="modal" onClick="processTransaction()">Add</button>
 									</form>
 								</div>
 							</div>
