Changed name of button.js

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 	<script src="load.js"></script>
-	<script src="button.js"></script>
+	<script src="form.js"></script>
 	<script src="data/database.js"></script>
 	<div id="sidebar" class="container">
 		<div class="page-header">
