Transaction view made default

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<div id="mainview" class="container">
-		<div class="container" style="display: none;" id="trans">
+		<div class="container" style="display: block;" id="trans">
 			<div class="row" id="head">
 				<div class="col-11">
 					<div class="page-header">
