--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -14,7 +14,7 @@
 	<script src="data/database.js"></script>
 	<div id="sidebar" class="container">
 		<div class="page-header">
-			<h3>Budgeting App</h3>
+			<h3>College Budgeting App</h3>
 		</div>
 		<div class="btn-group-vertical w-100">
 			<button onclick="TransactionFunc()" type="button" class="btn btn-primary" id="side-button">Transactions</button>
@@ -25,7 +25,7 @@
 		<div class="container" style="display: block;" id="trans">
 			<div class="row" id="head">
 				<div class="col-11">
-					<div class="page-header">
+					<div class="page-header" id="transhead">
 						<h5>Transactions</h5>
 					</div>
 				</div>
