Added Card to Transaction view
Added card header and card body to transaction body. Filled body with dummy data to show how it populates.

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -64,21 +64,49 @@
 					</div>
 				</div>
 			</div>
-			<div class="row" id="transTemplate">
-				<div class="col-2">
-					<!--Date Column-->
+			<div class="card" id="transHeader">
+				<div class="card-header">
+					<div class="row">
+						<div class="col-2">
+							Date
+						</div>
+						<div class="col-4">
+							Description
+						</div>
+						<div class="col-2">
+							Categ.
+						</div>
+						<div class="col-3">
+							Amount
+						</div>
+						<div class="col-1">
+						</div>
+					</div>
 				</div>
-				<div class="col-4">
-					<!--Description Column-->
-				</div>
-				<div class="col-2">
-					<!--Category Column-->
-				</div>
-				<div class="col-3">
-					<!--Amount Column-->
-				</div>
-				<div class="col-1">
-					<!--Buttons Column-->
+			</div>
+			<!--Filling with dummy data to show functionality-->
+			<div class="card-body">
+				<div class="row" id="transTemplate">
+					<div class="col-2">
+						<!--Date Column-->
+						2019-11-29
+					</div>
+					<div class="col-4">
+						<!--Description Column-->
+						Whataburger
+					</div>
+					<div class="col-2">
+						<!--Category Column-->
+						Food
+					</div>
+					<div class="col-3">
+						<!--Amount Column-->
+						$8.81
+					</div>
+					<div class="col-1">
+						<!--Buttons Column-->
+						<button class="button" id="pencil">&#9998;</button>
+					</div>
 				</div>
 			</div>
 		</div>
