Added text overflow handling

--- a/BudgetApp/index.html
+++ b/BudgetApp/index.html
@@ -67,10 +67,10 @@
 			<div class="card" id="transHeader">
 				<div class="card-header">
 					<div class="row">
-						<div class="col-2">
+						<div class="col-3">
 							Date
 						</div>
-						<div class="col-4">
+						<div class="col-3" style="text-overflow: ellipsis">
 							Description
 						</div>
 						<div class="col-2">
@@ -87,11 +87,11 @@
 			<!--Filling with dummy data to show functionality-->
 			<div class="card-body">
 				<div class="row" id="transTemplate">
-					<div class="col-2">
+					<div class="col-3">
 						<!--Date Column-->
 						2019-11-29
 					</div>
-					<div class="col-4">
+					<div class="col-3 notextwrap">
 						<!--Description Column-->
 						Whataburger
 					</div>
